# mlops_image-classification

./: .env.example  .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  planning.md  pyproject.toml
.github/workflows/: docker-tests.yml
airflow/: Dockerfile  requirements.txt
airflow/dags/: continous_training_pipeline.py  model_evaluation_pipeline.py  model_training_pipeline.py  populate_plants_pipeline.py  setup_connections_pipeline.py
airflow/dags/scripts/: create_connections.py  populate_database.py
api/: Dockerfile  app.py  requirements.txt
assets/formatted/: dandelion_clean.csv  grass_clean.csv
ml/models/: simple_model.py
ml/training/: trainer.py
monitoring/: prometheus.yml  statsd_mapping.yml
mysql_init/: plants.sql
scripts/: download_upload_s3.py  generate_insert_sql.py  import_metadata.sql  insert_dandelion.sql  inserts_grass.sql  plants.sql  preprocess_store.py  remove_blank_raw.py  run_tests_docker.sh  train_model.py
tests/: Dockerfile  conftest.py  pytest.ini  requirements.txt  run_tests.py  test_airflow_dags.py  test_api.py  test_integration.py  test_models.py  test_performance.py  test_training.py
tests/sql/: init_test_db.sql
webapp/: Dockerfile  app.py  requirements.txt
